# ai-sleepwalker

./: .gitignore  404.html  CHANGELOG.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  sample_dream.md  sitemap.xml
.github/workflows/: test.yml  tests.yml
ai_sleepwalker/: __main__.py  cli.py  constants.py  main.py  models.py
ai_sleepwalker/core/: __init__.py  filesystem_explorer.py  idle_detector.py  llm_client.py  prompts.py  sleep_preventer.py
ai_sleepwalker/experiences/: __init__.py  base.py  dream.py  factory.py
developer-guide/: index.html
docs/: developer-guide.md  getting-started.md  index.md
docs/reference/: api.md
getting-started/: index.html
reference/api/: index.html
scripts/: demo_dream_generation.py  init_project.py  keep_awake.py  sleepwalk_real.py
search/: search_index.json
tests/: README.md  conftest.py  old_test_sleepwalker_e2e.py.bak  test_components.py  test_docs_setup.py
tests/fixtures/: __init__.py  test_doubles.py
tests/integration/: __init__.py  test_cli_display_wake.py  test_complete_workflow_e2e.py  test_experience_workflow.py  test_llm_integration.py
tests/smoke/: __init__.py  test_sleepwalker_smoke.py
tests/unit/: __init__.py  test_filesystem_explorer.py  test_idle_detector.py  test_llm_client.py  test_prompts.py  test_sleep_preventer.py
